--- a/src/app/admin/components/addmedicinemana/addmedicineapp.component.html
+++ b/src/app/admin/components/addmedicinemana/addmedicineapp.component.html
@@ -100,7 +100,7 @@
                    <!--quantity-->
                    <div class="form-group">
                     <label class="col-form-label">Quantity</label>
-                    <input type="number" class="form-control" formControlName="quantity"  required>                          
+                    <input type="number" min="0" class="form-control" formControlName="quantity"  required>                          
                 </div>
            
            
