--- a/src/app/user/component/ScientificApp/scientificcomponent.html
+++ b/src/app/user/component/ScientificApp/scientificcomponent.html
@@ -47,7 +47,7 @@
         <a style="height: 100%;" class="home-product-item" [routerLink]="['/scientificdetail',{id:p.id}]"> <!--link-->
           <div class="home-product-item-img" style="background-image: url(https://localhost:5001/Image/{{p.illustration}})">
           </div>
-          <h4 class="home-product-item-name">Name:{{p.name}}</h4>
+          <h4 >{{p.name}}</h4>
           <div class="home-product-item__origin">
             <span class="home-product-item__origin-name">InventedYear:{{p.inventedYear}}</span>
           </div><br>
