--- a/src/app/admin/components/scientific/scientific.component.html
+++ b/src/app/admin/components/scientific/scientific.component.html
@@ -41,13 +41,13 @@
                           
                         </div>
                         <div class="form-group">
-                            <label class="col-form-label">Invented Year</label>
-                            <input type="text" class="form-control" formControlName="inventedYear"  required>
+                            <label class="col-form-label">year of manufacture </label>
+                            <input type="number" min="1" class="form-control" formControlName="inventedYear"  required>
                            
                         </div>
                         <div class="form-group">
                             <label class="col-form-label">Quantity</label>
-                            <input type="number" class="form-control" formControlName="quantity"  required>
+                            <input type="number" min="0" class="form-control" formControlName="quantity"  required>
                            
                         </div>
                         
